fix previous commit

--- a/mbdyn/modules/Makefile.am
+++ b/mbdyn/modules/Makefile.am
@@ -238,7 +238,7 @@ module-udunits/module-udunits.cc \
 module-udunits/README \
  \
 module-wheel2/module-wheel2.cc \
-module-wheel2/module-wheel2.h
+module-wheel2/module-wheel2.h \
  \
 module-wheel4/module-wheel4.cc \
 module-wheel4/module-wheel4.h \
