export module-inline_friction

--- a/mbdyn/modules/Makefile.am
+++ b/mbdyn/modules/Makefile.am
@@ -171,6 +171,42 @@ module-imu/imu_constraint \
 module-imu/imu.tex \
 module-imu/README \
  \
+module-inline_friction/module-inline_friction.cc \
+module-inline_friction/module-inline_friction.h \
+module-inline_friction/examples/inline_friction2_bench.elm \
+module-inline_friction/examples/inline_friction2.elm \
+module-inline_friction/examples/inline_friction2.mbdyn \
+module-inline_friction/examples/inline_friction2.nod \
+module-inline_friction/examples/inline_friction.mbdyn \
+module-inline_friction/@InLineFriction/AssJac.m \
+module-inline_friction/@InLineFriction/AssRes.m \
+module-inline_friction/@InLineFriction/ComputeDeltaXP.m \
+module-inline_friction/@InLineFriction/ComputeInitialResidual.m \
+module-inline_friction/@InLineFriction/ComputeResidual.m \
+module-inline_friction/@InLineFriction/ComputeTau.m \
+module-inline_friction/@InLineFriction/DescribeDof.m \
+module-inline_friction/@InLineFriction/DescribeEq.m \
+module-inline_friction/@InLineFriction/dGetPrivData.m \
+module-inline_friction/@InLineFriction/display.m \
+module-inline_friction/@InLineFriction/GetConnectedNodes.m \
+module-inline_friction/@InLineFriction/GetDofType.m \
+module-inline_friction/@InLineFriction/GetEqType.m \
+module-inline_friction/@InLineFriction/GetInitialStateVector.m \
+module-inline_friction/@InLineFriction/GetStateVector.m \
+module-inline_friction/@InLineFriction/iGetInitialNumDof.m \
+module-inline_friction/@InLineFriction/iGetNumConnectedNodes.m \
+module-inline_friction/@InLineFriction/iGetNumDof.m \
+module-inline_friction/@InLineFriction/iGetNumPrivData.m \
+module-inline_friction/@InLineFriction/iGetPrivDataIdx.m \
+module-inline_friction/@InLineFriction/InitialAssJac.m \
+module-inline_friction/@InLineFriction/InitialAssRes.m \
+module-inline_friction/@InLineFriction/InitialWorkSpaceDim.m \
+module-inline_friction/@InLineFriction/InLineFriction.m \
+module-inline_friction/@InLineFriction/SetInitialValue.m \
+module-inline_friction/@InLineFriction/SetValue.m \
+module-inline_friction/@InLineFriction/Update.m \
+module-inline_friction/@InLineFriction/WorkSpaceDim.m \
+ \
 module-mds/mds \
 module-mds/module-mds.cc \
  \
