export module-inplane_friction

--- a/mbdyn/modules/Makefile.am
+++ b/mbdyn/modules/Makefile.am
@@ -173,11 +173,6 @@ module-imu/README \
  \
 module-inline_friction/module-inline_friction.cc \
 module-inline_friction/module-inline_friction.h \
-module-inline_friction/examples/inline_friction2_bench.elm \
-module-inline_friction/examples/inline_friction2.elm \
-module-inline_friction/examples/inline_friction2.mbdyn \
-module-inline_friction/examples/inline_friction2.nod \
-module-inline_friction/examples/inline_friction.mbdyn \
 module-inline_friction/@InLineFriction/AssJac.m \
 module-inline_friction/@InLineFriction/AssRes.m \
 module-inline_friction/@InLineFriction/ComputeDeltaXP.m \
@@ -206,6 +201,40 @@ module-inline_friction/@InLineFriction/SetInitialValue.m \
 module-inline_friction/@InLineFriction/SetValue.m \
 module-inline_friction/@InLineFriction/Update.m \
 module-inline_friction/@InLineFriction/WorkSpaceDim.m \
+module-inline_friction/examples/inline_friction2_bench.elm \
+module-inline_friction/examples/inline_friction2.elm \
+module-inline_friction/examples/inline_friction2.mbdyn \
+module-inline_friction/examples/inline_friction2.nod \
+module-inline_friction/examples/inline_friction.mbdyn \
+ \
+module-inplane_friction/@InPlaneFriction/AssJac.m \
+module-inplane_friction/@InPlaneFriction/AssRes.m \
+module-inplane_friction/@InPlaneFriction/ComputeInitialResidual.m \
+module-inplane_friction/@InPlaneFriction/ComputeResidual.m \
+module-inplane_friction/@InPlaneFriction/CVS \
+module-inplane_friction/@InPlaneFriction/DescribeDof.m \
+module-inplane_friction/@InPlaneFriction/DescribeEq.m \
+module-inplane_friction/@InPlaneFriction/dGetPrivData.m \
+module-inplane_friction/@InPlaneFriction/display.m \
+module-inplane_friction/@InPlaneFriction/GetConnectedNodes.m \
+module-inplane_friction/@InPlaneFriction/GetDofType.m \
+module-inplane_friction/@InPlaneFriction/GetEqType.m \
+module-inplane_friction/@InPlaneFriction/GetInitialStateVector.m \
+module-inplane_friction/@InPlaneFriction/GetStateVector.m \
+module-inplane_friction/@InPlaneFriction/iGetInitialNumDof.m \
+module-inplane_friction/@InPlaneFriction/iGetNumConnectedNodes.m \
+module-inplane_friction/@InPlaneFriction/iGetNumDof.m \
+module-inplane_friction/@InPlaneFriction/iGetNumPrivData.m \
+module-inplane_friction/@InPlaneFriction/iGetPrivDataIdx.m \
+module-inplane_friction/@InPlaneFriction/InitialAssJac.m \
+module-inplane_friction/@InPlaneFriction/InitialAssRes.m \
+module-inplane_friction/@InPlaneFriction/InitialWorkSpaceDim.m \
+module-inplane_friction/@InPlaneFriction/InPlaneFriction.m \
+module-inplane_friction/@InPlaneFriction/SetInitialValue.m \
+module-inplane_friction/@InPlaneFriction/SetValue.m \
+module-inplane_friction/@InPlaneFriction/Update.m \
+module-inplane_friction/@InPlaneFriction/WorkSpaceDim.m \
+module-inplane_friction/examples/inplane_friction.mbdyn \
  \
 module-mds/mds \
 module-mds/module-mds.cc \
