--- a/mbdyn/include/mbdefs.h.in
+++ b/mbdyn/include/mbdefs.h.in
@@ -37,6 +37,7 @@
 #endif /* MODULE_LOADPATH */
 
 #define BINPATH                 "%BINPATH%"
+#define OCTAVEPATH		"%OCTAVEPATH%"
 
 #endif /* MBDEFS_H */
 
