--- a/mbdyn/var/Makefile.am
+++ b/mbdyn/var/Makefile.am
@@ -30,16 +30,16 @@ $(generated): FORCE
 	@for g in $(generated) ; do \
 		sed \
 			-e "s;@AWKDIR@;$(awkdir);" \
-			$(srcdir)/$$g.in > $$g ; \
+			$(top_srcdir)/var/$$g.in > $$g ; \
 	done
 
 install-data-local: $(EXTRA_DIST) $(generated)
 	$(mkinstalldirs) $(DESTDIR)$(datarootdir) $(DESTDIR)$(awkdir) $(DESTDIR)$(c81dir) $(DESTDIR)$(octavedir) $(DESTDIR)$(bindir)
 	@for f in $^ ; do \
 		case $$f in \
-		*.awk) echo "$(INSTALL_SCRIPT) -m 444 $$f $(DESTDIR)$(awkdir)" ; $(INSTALL_SCRIPT) -m 444 $(srcdir)/$$f $(DESTDIR)$(awkdir) ;; \
-		*.c81) echo "$(INSTALL_SCRIPT) -m 444 $$f $(DESTDIR)$(c81dir)" ; $(INSTALL_SCRIPT) -m 444 $(srcdir)/$$f $(DESTDIR)$(c81dir) ;; \
-		*.m) echo "$(INSTALL_SCRIPT) -m 444 $$f $(DESTDIR)$(octavedir)" ; $(INSTALL_SCRIPT) -m 444 $(srcdir)/$$f $(DESTDIR)$(octavedir) ;; \
+		*.awk) echo "$(INSTALL_SCRIPT) -m 444 $$f $(DESTDIR)$(awkdir)" ; $(INSTALL_SCRIPT) -m 444 $(top_srcdir)/var/$$f $(DESTDIR)$(awkdir) ;; \
+		*.c81) echo "$(INSTALL_SCRIPT) -m 444 $$f $(DESTDIR)$(c81dir)" ; $(INSTALL_SCRIPT) -m 444 $(top_srcdir)/var/$$f $(DESTDIR)$(c81dir) ;; \
+		*.m) echo "$(INSTALL_SCRIPT) -m 444 $$f $(DESTDIR)$(octavedir)" ; $(INSTALL_SCRIPT) -m 444 $(top_srcdir)/var/$$f $(DESTDIR)$(octavedir) ;; \
 		*.sh) ;; \
 		*.in) ;; \
 		*) echo "($$f ignored)" ;; \
