femgen more user friendly

--- a/mbdyn/utils/Makefile.am
+++ b/mbdyn/utils/Makefile.am
@@ -104,7 +104,7 @@ deriv_SOURCES = deriv.c
 printenv_SOURCES = env.c
 eu2rot_SOURCES = eu2rot.cc
 eu2phi_SOURCES = eu2phi.cc
-femgen_SOURCES = femgen.f
+femgen_SOURCES = femgen.c femgen_f.f
 intg_SOURCES = intg.cc intg.h
 playground_SOURCES = playground.cc
 logproc_SOURCES = logproc.c
