--- a/mbdyn/manual/femgen.1.in
+++ b/mbdyn/manual/femgen.1.in
@@ -46,11 +46,12 @@ Displays usage information.
 .TP
 .B \-o <output\-file>
 Name of file the database is written to (usually with \fI.fem\fP extension).
+If not set, the command prompts for it.
 .LP
 .SH AUTHOR
-The MBDyn Team <http://www.aero.polimi.it/~mbdyn/, http://www.mbdyn.org/>
+The MBDyn Team <http://www.mbdyn.org/>
 .SH ACKNOWLEDGEMENTS
 .B      MBDyn
-is developed and maintained by The MBDyn Team 
-(http://www.aero.polimi.it/~mbdyn/).
+is developed and maintained by The MBDyn Team <http://www.mbdyn.org/>,
+Politecnico di Milano, Dipartimento di Ingegneria Aerospaziale <http://www.aero.polimi.it/>.
 
