--- a/mbdyn/var/Makefile.am
+++ b/mbdyn/var/Makefile.am
@@ -5,6 +5,7 @@ include $(top_srcdir)/build/top.mk
 
 EXTRA_DIST = \
 abs2rel.awk \
+mbdyn_mov2ref.awk \
 mbdyn2easyanim.awk \
 mbdyn2pod.awk \
 periodize.awk \
