--- a/mbdyn/libraries/libmbutil/Makefile.am
+++ b/mbdyn/libraries/libmbutil/Makefile.am
@@ -8,6 +8,7 @@ noinst_LTLIBRARIES = libmbutil.la
 libmbutil_la_SOURCES = \
 cleanup.cc \
 cleanup.h \
+clock_time.cc \
 crypt.cc \
 crypt.h \
 demangle.cc \
