--- a/mbdyn/contrib/n2m/configure.in
+++ b/mbdyn/contrib/n2m/configure.in
@@ -1,6 +1,7 @@
-AC_INIT(lib.c)
+AC_INIT(n2m, 1.0)
+AC_CONFIG_SRCDIR(lib.c)
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE(n2m, 1.0)
+AM_INIT_AUTOMAKE
 AM_CONFIG_HEADER(config.h)
 AC_PROG_CC
 AM_PROG_LIBTOOL
