--- a/mbdyn/libraries/libann/Makefile.am
+++ b/mbdyn/libraries/libann/Makefile.am
@@ -16,7 +16,7 @@ matrix.h
 libmbann_la_LIBADD = @LIBS@
 libmbann_la_LDFLAGS =
 
-INCLUDES = \
+AM_CPPFLAGS = \
 -I../../include \
 -I$(srcdir)/../../include \
 -I$(srcdir)/../../mbdyn
