--- a/mbdyn/mbdyn/elec/Makefile.am
+++ b/mbdyn/mbdyn/elec/Makefile.am
@@ -39,7 +39,7 @@ swashpl.h
 libelec_la_LIBADD = @LIBS@
 libelec_la_LDFLAGS = -static
 
-INCLUDES = \
+AM_CPPFLAGS = \
 -I../../include \
 -I$(srcdir)/../../include \
 -I$(srcdir)/../../libraries/libmbutil \
