--- a/mbdyn/mbdyn/hydr/Makefile.am
+++ b/mbdyn/mbdyn/hydr/Makefile.am
@@ -25,7 +25,7 @@ valve.h
 libhydr_la_LIBADD = @LIBS@
 libhydr_la_LDFLAGS = -static
 
-INCLUDES = \
+AM_CPPFLAGS = \
 -I../../include \
 -I$(srcdir)/../../include \
 -I$(srcdir)/../../libraries/libmbutil \
