--- a/mbdyn/mbdyn/thermo/Makefile.am
+++ b/mbdyn/mbdyn/thermo/Makefile.am
@@ -18,7 +18,7 @@ thermalsource.cc
 libthermo_la_LIBADD = @LIBS@
 libthermo_la_LDFLAGS = -static
 
-INCLUDES = \
+AM_CPPFLAGS = \
 -I../../include \
 -I$(srcdir)/../../include \
 -I$(srcdir)/../../libraries/libmbutil \
